<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SCKW-App</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="NEWS">News</string>
    <string name="HOME">Home</string>
    <string name="IMPRESSUM">Impressum</string>
    <string name="LIVE_TICKER">LiveTicker</string>
    <string name="WHATS_HOT">What\'s Hot</string>
    <string name="action_example">Example action</string>


    <string name="draw_selector_on_top">Draw selector on top</string>
    <string name="use_selector_as_background">Use selector as background</string>

</resources>
